# proto/mdal.pb.gw.go
@@ -49,6 +49,27 @@ func request_MDAL_DataQuery_0(ctx context.Context, marshaler runtime.Marshaler, 
 
 }
 
+func request_MDAL_DataQuery2_0(ctx context.Context, marshaler runtime.Marshaler, client MDALClient, req *http.Request, pathParams map[string]string) (MDAL_DataQuery2Client, runtime.ServerMetadata, error) {
+	var protoReq DataQueryRequest
+	var metadata runtime.ServerMetadata
+
+	if err := marshaler.NewDecoder(req.Body).Decode(&protoReq); err != nil && err != io.EOF {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
+	}
+
+	stream, err := client.DataQuery2(ctx, &protoReq)
+	if err != nil {
+		return nil, metadata, err
+	}
+	header, err := stream.Header()
+	if err != nil {
+		return nil, metadata, err
+	}
+	metadata.HeaderMD = header
+	return stream, metadata, nil
+
+}
+
 // RegisterMDALHandlerFromEndpoint is same as RegisterMDALHandler but
 // automatically dials to "endpoint" and closes the connection when "ctx" gets done.
 func RegisterMDALHandlerFromEndpoint(ctx context.Context, mux *runtime.ServeMux, endpoint string, opts []grpc.DialOption) (err error) {
@@ -116,13 +137,46 @@ func RegisterMDALHandlerClient(ctx context.Context, mux *runtime.ServeMux, clien
 
 	})
 
+	mux.Handle("POST", pattern_MDAL_DataQuery2_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		if cn, ok := w.(http.CloseNotifier); ok {
+			go func(done <-chan struct{}, closed <-chan bool) {
+				select {
+				case <-done:
+				case <-closed:
+					cancel()
+				}
+			}(ctx.Done(), cn.CloseNotify())
+		}
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		rctx, err := runtime.AnnotateContext(ctx, mux, req)
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := request_MDAL_DataQuery2_0(rctx, inboundMarshaler, client, req, pathParams)
+		ctx = runtime.NewServerMetadataContext(ctx, md)
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+
+		forward_MDAL_DataQuery2_0(ctx, mux, outboundMarshaler, w, req, func() (proto.Message, error) { return resp.Recv() }, mux.GetForwardResponseOptions()...)
+
+	})
+
 	return nil
 }
 
 var (
 	pattern_MDAL_DataQuery_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2}, []string{"v1", "mdal", "query"}, ""))
+
+	pattern_MDAL_DataQuery2_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2}, []string{"v1", "mdal", "query2"}, ""))
 )
 
 var (
 	forward_MDAL_DataQuery_0 = runtime.ForwardResponseStream
+
+	forward_MDAL_DataQuery2_0 = runtime.ForwardResponseStream
 )
